# flock

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
mcp/: README.md  flock-mcp.mjs  package-lock.json  package.json
pwa/: app.js  index.html  manifest.webmanifest  sw.js
src/: App.tsx  index.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  env_profiles.rs  error.rs  git.rs  kb.rs  lib.rs  main.rs  mcp.rs  monitor.rs  pr.rs  pty.rs  schedule.rs  state.rs  transcript.rs
src-tauri/src/api/: mod.rs
src/components/: NewOrchestratorModal.tsx  NewWorktreeModal.tsx  PrFooter.tsx  SettingsModal.tsx  Sidebar.tsx  TabBar.tsx  TerminalPane.tsx  TitleBar.tsx
src/lib/: ipc.ts  places.ts  store.ts
